<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/coverimage1"
    tools:context=".MainActivity"  >

    <!-- Add ImageView for the logo -->
    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/logo"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="0dp" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/signup_text"
                android:id="@+id/SignupText"
                android:textSize="30sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@color/black" />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/firstName"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/first_name_hint"
                android:inputType="text"
                android:autofillHints="name"
                android:textColor="@color/black"
                android:padding="8dp"
                android:importantForAutofill="yes"
                android:layout_marginTop="30dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/lastName"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/last_name_hint"
                android:inputType="text"
                android:autofillHints="name"
                android:textColor="@color/black"
                android:padding="8dp"
                android:importantForAutofill="yes"
                android:layout_marginTop="20dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/email"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                android:textColor="@color/black"
                android:padding="8dp"
                android:importantForAutofill="yes"
                android:layout_marginTop="20dp"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/password"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:autofillHints="newPassword"
                android:textColor="@color/black"
                android:padding="8dp"
                android:importantForAutofill="yes"
                android:layout_marginTop="20dp"/>


            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/confirmPassword"
                android:background="@drawable/custom_edittext"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/confirm_password_hint"
                android:inputType="textPassword"
                android:autofillHints="newPassword"
                android:textColor="@color/black"
                android:padding="8dp"
                android:importantForAutofill="yes"
                android:layout_marginTop="20dp"/>


            <Button
                android:id="@+id/signupButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/black"
                android:text="@string/signup_text"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                tools:ignore="DuplicateSpeakableTextCheck" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/LoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:text="@string/login_prompt"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        tools:ignore="TextContrastCheck" />

</LinearLayout>
