<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/coverimage1"
    tools:context=".MainActivity"
    android:paddingTop="0dp">

    <!-- App Bar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="0dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <!-- Back Button -->
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24"
            android:padding="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/signup_text"/>

        <!-- Logo ImageView -->
        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:src="@drawable/logo"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"/>

    </androidx.appcompat.widget.Toolbar>




    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/beige"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/SignupText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirm_order"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/SignupText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fill"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:autofillHints="name"
                android:background="@drawable/custom_edittext1"
                android:drawableStart="@drawable/baseline_person_24"
                android:drawablePadding="8dp"
                android:hint="@string/full_name_hint"
                android:importantForAutofill="yes"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black" />


            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/custom_edittext1"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:hint="@string/email_hint"
                android:importantForAutofill="yes"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/contact"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:autofillHints="contact"
                android:background="@drawable/custom_edittext1"
                android:drawableStart="@drawable/baseline_call_24"
                android:drawablePadding="8dp"
                android:hint="@string/contact_hint"
                android:importantForAutofill="yes"
                android:inputType="number"
                android:padding="8dp"
                android:textColor="@color/black"
               />

            <Button
                android:id="@+id/contactPickerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Access Contact"
                android:onClick="openContacts"/>



            <TextView
                android:id="@+id/SignupText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/event"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/event"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/custom_edittext1"
                android:drawableStart="@drawable/baseline_description_24"
                android:drawablePadding="8dp"
                android:hint="event description"
                android:importantForAutofill="yes"
                android:inputType="text"
                android:padding="8dp"
                android:textColor="@color/black" />


            <EditText
                android:id="@+id/dateEditText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/custom_edittext1"
                android:drawableStart="@drawable/baseline_calendar_month_24"
                android:drawablePadding="8dp"
                android:hint="@string/date"
                android:importantForAutofill="yes"
                android:inputType="date"
                android:padding="8dp"
                android:textColor="@color/black" />


            <EditText
                android:id="@+id/guests"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:autofillHints="emailAddress"
                android:background="@drawable/custom_edittext1"
                android:drawableStart="@drawable/baseline_groups_24"
                android:drawablePadding="8dp"
                android:hint="guest count"
                android:importantForAutofill="yes"
                android:inputType="number"
                android:padding="8dp"
                android:textColor="@color/black" />


            <Button
                android:id="@+id/enquireButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/black"
                android:text="@string/submit_form"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                tools:ignore="DuplicateSpeakableTextCheck" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>
