<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    tools:context=".MainActivity">

    <!-- App Bar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

        <!-- Back Button -->
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24"
            android:padding="10dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/signup_text"/>

        <!-- Logo ImageView -->
        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:src="@drawable/logo"
            android:layout_gravity="end"
            android:layout_marginEnd="16dp"/>

    </androidx.appcompat.widget.Toolbar>



    <TextView
        android:id="@+id/categoriesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SELECT LOCATION ON MAP"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_below="@id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>

    <!-- Map Image -->
    <ImageView
        android:id="@+id/mapImageView"
        android:layout_width="match_parent"
        android:layout_height="635dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description"
        android:scaleType="fitXY"
        android:src="@drawable/map"
        android:layout_below="@id/categoriesTextView"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <!-- Address Input Layout -->
    <androidx.cardview.widget.CardView
        android:id="@+id/addressCardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/custom_edittext"
        app:cardCornerRadius="10dp"
        app:cardElevation="20dp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="14dp">

            <TextView
                android:id="@+id/SignupText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="18sp"
                />

            <EditText
                android:id="@+id/address1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edittext1"
                android:drawableStart="@drawable/baseline_location_on_24"
                android:drawablePadding="8dp"
                android:hint="@string/address_input"
                android:padding="8dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/address2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/custom_edittext1"
                android:drawableStart="@drawable/baseline_location_on_24"
                android:drawablePadding="8dp"
                android:hint="@string/address_input"
                android:padding="8dp"
                android:textColor="@color/black" />


            <Button
                android:id="@+id/order_success"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/black"
                android:text="@string/confirm_address"
                android:textSize="18sp"
                app:cornerRadius="20dp"
                tools:ignore="DuplicateSpeakableTextCheck" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>
